@startuml
class com.example.budgetcatalog.MainActivity {
~ DbHelper db
~ ListView lv
~ Button btnAdd
~ EditText edFind
~ String id
~ int positionSel
~ Cursor cr
~ SimpleCursorAdapter sCr
# void onCreate(Bundle)
- void loadData(String)
+ void onCreateContextMenu(ContextMenu,View,ContextMenu.ContextMenuInfo)
+ boolean onContextItemSelected(MenuItem)
+ void onResume()
+ void onClickBtn(View)
}
class com.example.budgetcatalog.DbHelper {
- {static} String DB_NAME
~ Context context
+ void onCreate(SQLiteDatabase)
+ void onUpgrade(SQLiteDatabase,int,int)
+ Cursor query(String)
+ boolean sqlExec(String)
}
class com.example.budgetcatalog.AddEditBudget {
~ DbHelper db
~ EditText edName
~ Button btnSave
~ String rowId
# void onCreate(Bundle)
+ void onClickBtn(View)
}


androidx.appcompat.app.AppCompatActivity <|-- com.example.budgetcatalog.MainActivity
android.database.sqlite.SQLiteOpenHelper <|-- com.example.budgetcatalog.DbHelper
androidx.appcompat.app.AppCompatActivity <|-- com.example.budgetcatalog.AddEditBudget
@enduml
